--- a/remodel/toDo.txt
+++ b/remodel/toDo.txt
@@ -4,4 +4,6 @@
 4. print dimension of sink and cooktop. 
 5. ask for dimensions of kitchen and height.
 6. confirm there is light and outlet in attic
+7. Buy toilet cover using printed coupon (in my bag) or online promotion code
+8. Buy Fernoco Inc. FTS-3 3-Inch Wax Free toilet seal (ask Steve it's 3" or 4"), home depot $4.7.
 
