--- a/remodel/toDo.txt
+++ b/remodel/toDo.txt
@@ -8,3 +8,4 @@
 8. Buy Fernoco Inc. FTS-3 3-Inch Wax Free toilet seal (ask Steve it's 3" or 4"), home depot $4.7.
 9. Check water heater for 4 usage concurrently
 10. Check Water filter with hot water line
+11. tell mei water heater, and for disposal, water filter, and microwave we need three outlet.
